--- a/css/styles.css
+++ b/css/styles.css
@@ -28,10 +28,33 @@ main {
 section {
   font-size: 1em;
   background: #888;
-  width: 22%;
   margin: 1em 1% 1em 1%;
-  display: inline-block;
+  
 }
+
+section:hover {
+	background:#666;
+}
+
+
+@media screen and (min-width: 500px) {
+  body {
+    background: red;
+  }
+  section {
+	width: 45%;
+	display: inline-block;
+  }
+}
+@media screen and (min-width: 1000px) {
+	body{
+		background: blue;
+	}
+	
+	section {
+		width: 22%
+	}
+
 section:hover {
   background: #666;
 }
